@@ -28,6 +28,20 @@ android {
 
     compileSdk = libs.versions.androidCompileSdk.get().toInt()
 
+    testOptions {
+        unitTests.all {
+            it.jvmArgs(
+                "-XX:+EnableDynamicAgentLoading",
+                "-Xshare:off",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "-Dnet.bytebuddy.experimental=true"
+            )
+        }
+    }
+
     defaultConfig {
         applicationId = "com.google.maps.android.ktx.demo"
         minSdk = libs.versions.androidMinSdk.get().toInt()
@@ -78,6 +92,7 @@ dependencies {
     // the README installation instructions
     implementation(project(":maps-ktx"))
     implementation(project(":maps-utils-ktx"))
+    implementation(libs.play.services.location)
 
     // Tests
     testImplementation(libs.androidx.test)
@@ -85,7 +100,6 @@ dependencies {
     testImplementation(libs.junit)
     testImplementation(libs.mockito.core)
     testImplementation(libs.mockito.kotlin)
-    testImplementation(libs.mockito.inline)
     testImplementation(libs.truth)
     testImplementation(libs.kotlinx.coroutines.test)
 
